2016-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c (check_exec_for_suid_message): New
	  function to verify a binary is secure
	* client-src/client_util.h(check_exec_for_suid_message: Add prototype
	* application-src/ambsdtar.c, application-src/amgtar.c,
	  application-src/amstar.c, client-src/runtar.c: Call
	  check_exec_for_suid before running a binary as root
	* installcheck/ambsdtar.pl: Fix check
	* installcheck/amgtar.pl: Fix check

2016-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/runtar.c: Filter tar arguments
	* installcheck/runtar.pl: Check runtar errorr
	* installcheck/Makefile.am: Add runtar.pl

2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* config/set_full_version: Fix for new URL path

2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Typo
	* ReleaseNotes: Typo

2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Change in 3.3.8
	* ReleaseNotes: Change in 3.3.8
	* VERSION: 3.3.8

2015-12-10  Xu Han <xhan@carbonite.com>
	* packaging/common/post_inst_functions.sh: Adding the correct
	  Amanda sbin path to Solaris Amandabackup user profile file

2015-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (slot_can_have_label): New function to
	  tell if a slot can have a label, ths function check the barcode
	* perl/Amanda/Recovery/Scan.pm: Do not scan a slot if
	  slot_can_have_label return 0

2015-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Recovery/Scan.pm: Set a user_msg_fn in new
	* server-src/amfetchdump.pl: Add a user_msg_fn to print scan error to
	  stdout
	* server-src/amvault.pl: Adda user_msg_fn to print scan error to
	  stdout and log as L_INFO

2015-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndma_tape.c (ndmta_read_quantum): Fix setting
	  ta->mover_state.record_num

2015-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Fir debugging message