@@ -1,4 +1,8 @@
 2016-01-22  Jean-Louis Martineau <martineau@zmanda.com>
+	* application-src/ambsdtar.c, application-src/amgtar.c,
+	  application-src/amstar.c: Filter option from COMMAND-OPTIONS
+
+2016-01-22  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/client_util.c (check_exec_for_suid_message): New
 	  function to verify a binary is secure
 	* client-src/client_util.h(check_exec_for_suid_message: Add prototype
